--- a/package.json
+++ b/package.json
@@ -41,5 +41,9 @@
     "postcss-import": "^15.1.0",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.3"
-  }
+  ,
+  "packageManager": "pnpm@10.12.4"
+}
+,
+  "packageManager": "pnpm@10.12.4"
 }
