--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "next": "15.1.6",
     "react": "18.3.1",
     "react-dom": "18.3.1"
@@ -16,7 +17,7 @@
     "@types/react-dom": "18.3.2",
     "autoprefixer": "10.4.14",
     "postcss": "8.4.24",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.1.18",
     "typescript": "5.7.3"
   },
   "packageManager": "pnpm@10.12.4",
